<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:columnCount="2"
    android:useDefaultMargins="true"
    android:padding="@dimen/padding_grid"
    tools:context=".MainActivity"
    android:background="@color/gaindBoro">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"
        android:text="@string/Boy"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:digits="0123456789"
        android:maxLength="3"
        android:inputType="number" >

        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/boy_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:background="@color/darkGrey"
        android:padding="8dp"
        android:textColor="@color/black"
        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Kilo"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right" />

    <SeekBar
        android:id="@+id/kilo_sb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:progress="20"/>

    <TextView
        android:id="@+id/kilo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="________"
        android:textColor="@color/white"
        android:background="@color/darkGrey"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/Cinsiyet"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center_vertical|right"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:orientation="horizontal"
        android:layout_gravity="fill_horizontal">

        <RadioButton
            android:id="@+id/erkek_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Erkek"/>

        <RadioButton
            android:id="@+id/kadın_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:checked="true"
            android:text="@string/Kadın" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/İdeal_Kilo"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"/>

    <TextView
        android:id="@+id/ideal_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_row="4"
        android:layout_column="1"
        android:background="@color/darkGrey"
        android:padding="8dp"
        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Durum"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"/>

    <TextView
        android:id="@+id/durum_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_row="5"
        android:layout_column="1"
        android:padding="8dp"
        android:layout_gravity="fill_horizontal"
        android:background="@color/darkGrey"/>

    <Space />

    <RelativeLayout
        android:id="@+id/Bannerüst"
        android:layout_width="311dp"
        android:layout_height="77dp"
        android:layout_marginTop="10dp" />


</GridLayout>